--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,6 @@
         "bower-asset/font-awesome": "^4.7",
         "bower-asset/owl.carousel": "^2.2",
         "bower-asset/magnific-popup": "^1.1",
-        "elasticsearch/elasticsearch": "^5.2",
         "yii-cms/yii2-robokassa": "^1.1",
         "phpoffice/phpexcel": "^1.8",
         "mihaildev/yii2-ckeditor": "^1.0",
@@ -44,7 +43,8 @@
         "league/flysystem": "^1.0",
         "kartik-v/yii2-widget-rating": "*",
         "himiklab/yii2-recaptcha-widget" : "*",
-        "kartik-v/yii2-grid": "dev-master"
+        "kartik-v/yii2-grid": "dev-master",
+        "carono/yii2-1c-exchange": "^0.2.9"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
