--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -1,10 +1,10 @@
 server {
    charset utf-8;
-   client_max_body_size 128M;
+   client_max_body_size 256M;
    sendfile off;
 
-   #listen 192.168.0.150:80; ## listen for ipv4
-   listen 80; ## listen for ipv4
+   listen 192.168.0.150:80; ## listen for ipv4
+   #listen 80; ## listen for ipv4
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
    server_name shop.test;
@@ -30,6 +30,7 @@ server {
        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
        #fastcgi_pass   127.0.0.1:9000;
        fastcgi_pass unix:/var/run/php/php7.1-fpm.sock;
+       fastcgi_read_timeout 3600;
        try_files $uri =404;
    }
 
