--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "carono/yii2-1c-exchange": "^0.2.9",
         "yiisoft/yii2-bootstrap4": "^2.0",
         "wokster/yii2-nested-sets-tree-behavior": "*",
-        "2amigos/yii2-transliterator-helper": "*"
+        "2amigos/yii2-transliterator-helper": "*",
+        "skeeks/yii2-slug-behavior": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
